[gd_scene load_steps=3 format=3 uid="uid://5xfs2ywrmqso"]

[ext_resource type="Script" path="res://scripts/UI/slot_item.gd" id="1_2o56h"]
[ext_resource type="Texture2D" uid="uid://cmkbbchmkt2c8" path="res://assets/sprites/Cute_Fantasy/Icons/No Outline/Tool_Icons_NO_Outline_Separated/sword.png" id="2_67fo1"]

[node name="Slot" type="Control"]
custom_minimum_size = Vector2(41, 30)
layout_mode = 3
anchors_preset = 0
offset_right = 41.0
offset_bottom = 38.0
script = ExtResource("1_2o56h")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_67fo1")

[node name="VisibleOnScreenNotifierDown" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(149.5, 142)
scale = Vector2(10.35, 0.0999999)

[node name="VisibleOnScreenNotifierUp" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(150, 42)
scale = Vector2(10.35, 0.0999999)

[node name="ColorRect" type="ColorRect" parent="."]
z_index = 1
layout_mode = 0
offset_left = 46.0
offset_top = 41.0
offset_right = 253.0
offset_bottom = 143.0
color = Color(0.721569, 0.435294, 0.313726, 1)

[node name="ItemName" type="Label" parent="ColorRect"]
layout_mode = 1
offset_left = 6.0
offset_top = 8.0
offset_right = 202.0
offset_bottom = 31.0

[node name="ItemDescription" type="Label" parent="ColorRect"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 6.0
offset_top = -71.0
offset_right = 201.0
offset_bottom = -9.0
grow_vertical = 0
text = "A simple pickaxe. You can use to break stones."
autowrap_mode = 2
clip_text = true

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
